--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "procedural-gl",
   "version": "1.0.19",
   "description": "3D mapping engine for the web",
-  "main": "build/procedural-gl.js",
+  "main": "ui/dem_type.js",
   "module": "build/procedural-gl.module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +15,12 @@
     "deploy": "vercel --prod"
   },
   "files": [
+    "build/procedural-gl.js",
+    "build/procedural-gl.min.js",
+    "build/procedural-gl.module.js",
+    "LICENSE",
+    "package.json",
+    "README.md"
   ],
   "dependencies": {
     "vercel": "^32.3.0"
