--- a/package.json
+++ b/package.json
@@ -1,67 +1,18 @@
 {
-  "name": "procedural-gl",
-  "version": "1.0.19",
+  "name": "austrian-map",
+  "version": "0.0.0",
   "description": "3D mapping engine for the web",
-  "main": "ui/dem_type.js",
-  "module": "build/procedural-gl.module.js",
+  "private": true,
+  "main": "./build/procedural-gl.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vite build",
-    "build-dev": "rollup -c --environment DEV",
-    "compile": "cd shaders && ./minify.sh && cd - && rollup -c",
     "dev": "vite",
-    "lint": "eslint src --ext js --fix",
-    "uglify": "uglifyjs build/procedural-gl.js -o build/procedural-gl.min.js -c -m",
+    "build": "vite build",
     "deploy": "vercel --prod"
   },
-  "files": [
-    "build/procedural-gl.js",
-    "build/procedural-gl.min.js",
-    "build/procedural-gl.module.js",
-    "LICENSE",
-    "package.json",
-    "README.md"
-  ],
-  "dependencies": {
-    "vercel": "^32.3.0"
-  },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@rollup/plugin-sucrase": "^3.0.1",
-    "eslint": "^7.7.0",
-    "eslint-config-mdcs": "^5.0.0",
-    "rollup": "^1.14.6",
-    "rollup-plugin-root-import": "^1.0.0",
-    "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-visualizer": "^4.0.4",
-    "uglify-es": "^3.3.9",
-    "uglify-js": "^3.18.0",
     "vite": "^5.3.3",
-    "vite-plugin-restart": "^0.4.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/felixpalmer/procedural-gl-js.git"
-  },
-  "keywords": [
-    "javascript",
-    "3d",
-    "webgl",
-    "map",
-    "dataviz",
-    "canvas",
-    "html5",
-    "gis",
-    "geospatial",
-    "three.js"
-  ],
-  "author": "felixpalmer",
-  "license": "MPL-2.0",
-  "bugs": {
-    "url": "https://github.com/felixpalmer/procedural-gl-js/issues"
-  },
-  "homepage": "https://github.com/felixpalmer/procedural-gl-js#readme"
+    "vite-plugin-restart": "^0.4.0",
+    "vercel": "^32.3.0"
+  }
 }
